// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ExpressConfig 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`@ExpressConfig 2`] = `"abc"`;

exports[`@ExpressConfig Order 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`@ExpressConfig Order 2`] = `"abc"`;

exports[`ErrorConfig 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 500,
  "text": "error",
}
`;

exports[`ErrorConfig 2`] = `"e"`;

exports[`ErrorConfig order 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 500,
  "text": "error",
}
`;

exports[`ErrorConfig order 2`] = `"de"`;
